testcrates/compiletest/tests/ui/compile-fail/invalid-signature.stderr
error: test functions cannot take generic parameters
 --> $DIR/invalid-signature.rs:4:18
  |
4 | fn has_type_param<T>() {}
  |                  ^^^

error: test functions cannot take generic parameters
 --> $DIR/invalid-signature.rs:7:19
  |
7 | fn has_const_param<const N: usize>() {}
  |                   ^^^^^^^^^^^^^^^^
